# hotel-ai-assistant

backend/: main.py  pyproject.toml
frontend/: ARCHITECTURE_COMPARISON.md  REACT_FUNDAMENTALS_GUIDE.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/chat/: ChatInput.tsx  LoadingMessage.tsx  MessageBubble.tsx  MessageList.tsx
frontend/src/hooks/: useChat.ts
frontend/src/pages/: ChatPage.tsx
