[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "imenbouali",email = "joubeliimen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ipython (>=9.5.0,<10.0.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "transformers (>=4.56.0,<5.0.0)",
    "accelerate (>=1.10.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "chatbot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"     
